--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,10 +17,11 @@
       ]
     }
   ],
+  "badgeTemplate": "[![GitHub contributors (via allcontributors.org)](https://img.shields.io/github/all-contributors/<%= projectOwner %>/<%= projectName %>?label=Contributors&logo=<%= repoType %>&logoColor=white&style=for-the-badge)](#contributors)",
   "contributorsPerLine": 7,
   "skipCi": true,
   "repoType": "github",
   "repoHost": "https://github.com",
-  "projectName": "documentation",
+  "projectName": "Documentation",
   "projectOwner": "HSSPfile"
 }
