--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -23,5 +23,6 @@
   "repoType": "github",
   "repoHost": "https://github.com",
   "projectName": "documentation",
-  "projectOwner": "HSSPfile"
+  "projectOwner": "HSSPfile",
+  "badgeTemplate": ""
 }
