--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,7 +9,7 @@
   "contributors": [
     {
       "login": "Le0X8",
-      "name": "LeoX DEV",
+      "name": "Leonard Lesinski",
       "avatar_url": "https://avatars.githubusercontent.com/u/84378319?v=4",
       "profile": "http://leox.dev",
       "contributions": [
